[package]
name = "multi-map-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = [ "macros", "tracing" ] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
validator = { version = "0.16.1", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
uuid = { version = "1.4.1", features = ["v4"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde_json = "1.0.108"
tower-http = { version = "0.5.0", features = ["trace"]  }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
serde_valid = { version = "0.16.3" }
